fixed size of stats cards on mobile and added README

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -48,6 +48,11 @@ height:35px;
   left: 10px;
 }
 
+.stats-card{
+  width: 70vw;
+  margin-top: 20px;
+}
+
 @media only screen and (min-width: 600px) {
   .form-field {
     width: 30vw;
@@ -59,6 +64,9 @@ height:35px;
     margin-top: 20px !important;
   }
   
+  .stats-card{
+    width: 40vw;
+  }
 }
 
 
